--- a/main.html
+++ b/main.html
@@ -1645,7 +1645,7 @@ width: 200px; /* Ajusta según el tamaño deseado */
   </ion-nav-buttons>
        
         <ion-nav-buttons side="left">
-          <button class="button button-clear menubtn" ng-click="toggleRight()"><i class="button button-icon ion-navicon"></i>menu</button>
+          <button class="button button-clear" ng-click="toggleRight()"><i class="button button-icon ion-navicon"></i>menu</button>
         </ion-nav-buttons>  
 
             
