--- a/main.html
+++ b/main.html
@@ -2624,7 +2624,7 @@ app
       $scope.dropdownChatVisible = false;
 };
 
-     $scope.isNotAgenda = !$state.current.name.includes('menu.agenda');
+     $scope.isNotAgenda = !$state.current.name.includes('menu.reel');
 
     $scope.loadingProfile = true;
   SharedState.getNum().then(function(data) {
