--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@ width: 200px; /* Ajusta según el tamaño deseado */
     
  <script id="menu.html" type="text/ng-template">
     <ion-side-menus >
-      <ion-side-menu side="left" width='280'  expose-aside-when="large">
+      <ion-side-menu side="left" width='280'  >
          
         <ion-content>
 
