--- a/index.html
+++ b/index.html
@@ -910,15 +910,15 @@ width: 200px; /* Ajusta según el tamaño deseado */
         </div>
           </div>  
         </div>
-     
+
  <ul class="list">
-           <a href="#/menu/profile" class="item" ng-class="(activeMenuClr=='profile')?'menuSelectedColor':''" ng-click="activeMenuClr = 'profile'" menu-toggle="left"><i class="ri-presentation-line" ></i>&nbsp&nbspLecciones</a> 
-       <a href="#/menu/library" class="item" ng-class="(activeMenuClr=='library')?'menuSelectedColor':''" ng-click="activeMenuClr = 'library'" menu-toggle="left"><i class="ri-book-shelf-line" ></i>&nbsp&nbspRepertorio</a>
-           <a href="#/menu/courses" class="item" ng-class="(activeMenuClr=='courses')?'menuSelectedColor':''" ng-click="activeMenuClr = 'courses'" menu-toggle="left"><i class="ri-music-ai-line" ></i>&nbsp&nbspDestreza</a> 
+           <a href="main#/menu/profile" class="item"  ><i class="ri-presentation-line" ></i>&nbsp&nbspLecciones</a> 
+       <a href="main#/menu/library" class="item" ><i class="ri-book-shelf-line" ></i>&nbsp&nbspRepertorio</a>
+           <a href="main#/menu/courses" class="item" ><i class="ri-music-ai-line" ></i>&nbsp&nbspDestreza</a> 
 <hr>
-     <a href="#/menu/statistics" class="item" ng-class="(activeMenuClr=='statistics')?'menuSelectedColor':''" ng-click="activeMenuClr = 'statistics'" menu-toggle="left"><i class="ri-line-chart-line"></i>&nbsp&nbspEstadísticas</a> 
-     <a href="#/menu/agenda" class="item" ng-class="(activeMenuClr=='agenda')?'menuSelectedColor':''" ng-click="activeMenuClr = 'agenda'" menu-toggle="left"><i class="ri-calendar-todo-fill"></i>&nbsp&nbspCalendario</a> 
-   <!--       <a href="#/menu/reel/achievements" class="item" ng-class="(activeMenuClr=='reel')?'menuSelectedColor':''" ng-click="activeMenuClr = 'reel'" menu-toggle="left"><i class="ri-user-community-line"></i></i>&nbsp&nbspComunidad</a>    -->
+     <a href="main#/menu/statistics" class="item" ><i class="ri-line-chart-line"></i>&nbsp&nbspEstadísticas</a> 
+     <a href="main#/menu/agenda" class="item" ><i class="ri-calendar-todo-fill"></i>&nbsp&nbspCalendario</a> 
+   <!--       <a href="main#/menu/reel" class="item" ><i class="ri-user-community-line"></i></i>&nbsp&nbspComunidad</a>    -->
  
                          
           </ul>
