--- a/index.html
+++ b/index.html
@@ -891,10 +891,10 @@ width: 200px; /* Ajusta según el tamaño deseado */
       <div class="profile-user-data clearfix" class="item" ng-click="goToReel()" style="cursor: pointer;" menu-toggle="left">
         <div id="loadingProfile" ng-if="loadingProfile" style="margin-top: 20px !important;"></div>
           <div class="circle">
-              <img class="profile-pic" src="{{userData.photo}}">
+              <img class="profile-pic" src="https://lh3.googleusercontent.com/d/1BzW7uNt3h6Q--lSj8SNoEQ-YdJwlCuoB">
           </div>
           <div class="main-data" style="margin-top: 12px;" ng-if="!loadingProfile">
-            <h4 >{{userData.name}}</h4>
+            <h4 >Mozart Academy</h4>
         <div class="pull-left planTag" ng-if="userPlan == 'Premium' && userData.status == 'ACTIVO'" style="color: orange; text-shadow: 0 0 10px orange;"> PLAN PREMIUM
             <i class="ri-vip-crown-fill" style="color: orange; text-shadow: 0 0 10px orange;"></i>  </div>
     <div class="pull-left planTag" ng-if="userPlan == 'Pro' && userData.status == 'ACTIVO'" style="color: #20a2f1; text-shadow: 0 0 1px #20a2f1;"> PLAN PRO
