--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no">
 <link rel="icon" href="https://lh3.googleusercontent.com/d/1h0PAuatp8mguH19cso6wh19mjMVa0K5V" type="image/x-icon">
-    <title>Mozart Appcademy</title>
+    <title>Mozart Academy</title>
   
 <link href="https://code.ionicframework.com/1.3.3/css/ionic.min.css" rel="stylesheet">
   <script src="https://code.ionicframework.com/1.3.3/js/ionic.bundle.min.js"></script>
@@ -967,9 +967,8 @@ width: 200px; /* Ajusta según el tamaño deseado */
   <div style="display: flex; align-items: center;" >    
    
   <div class="user-info" style="margin-top: -2px;">
-   <div style="font-size: 13px; font-weight: 600; color: #333;">{{userData.name}}</div>
-  <div style="font-size: 12px; color: #777; margin-top: -15px;" ng-if="userData.lvl == 0">Preparatorio</div>
-          <div style="font-size: 11px; color: #777; margin-top: -15px;" ng-if="userData.lvl != 0">Nivel {{userData.lvl}}</div>
+   <div style="font-size: 13px; font-weight: 600; color: #333;">Mozart Academy</div>
+          <div style="font-size: 11px; color: #777; margin-top: -15px;" >Inicia sesión</div>
    </div>
 
     <div style="position: relative; " class="profilImg">
@@ -987,7 +986,7 @@ width: 200px; /* Ajusta según el tamaño deseado */
     box-shadow: 0 0 0 2px #1e2b47; /* sombra tipo segundo anillo */
   ">
     <!-- Imagen de perfil -->
-    <img src="{{userData.photo}}" width="30" height="30" style="border-radius: 50%; border: 0.5px solid black;" />
+    <img src="https://lh3.googleusercontent.com/d/1gA-HKzQXWksHNg8jCbUveFUXoE3jfip_" width="30" height="30" style="border-radius: 50%; border: 0.5px solid black;" />
   </div>
 
   <!-- Punto de estado -->
@@ -1020,19 +1019,16 @@ width: 200px; /* Ajusta según el tamaño deseado */
      <div id="bannerRow">
       <div class="profileImageContainer">
      <div id="loading" ng-if="loadingProfile" style="height: 60px;"></div>
-        <img src="{{userData.photo}}"  ng-if="!loadingProfile"/>
+        <img src="https://lh3.googleusercontent.com/d/1BzW7uNt3h6Q--lSj8SNoEQ-YdJwlCuoB"  ng-if="!loadingProfile"/>
       </div>
-      <p class="profileName">{{userData.name}}</p>
-      <p class="profileEmail">{{userData.mail}}</p>
+      <p class="profileName">Mozart Academy</p>
+      <p class="profileEmail">inicia sesión</p>
     </div>
     <div class="dropdown-item" ng-click="goToAccount()">
-      <i class="ion-ios-contact-outline"></i> Perfil
+      <i class="ion-ios-contact-outline"></i> Iniciar sesión
     </div>
       <div class="dropdown-item" ng-click="goToStatus()">
-      <i class="ri-settings-3-line"></i> Configuración
-    </div>
-    <div class="dropdown-item" ng-click="logout()">
-      <i class="ri-logout-box-r-line"></i> Salir
+      <i class="ri-settings-3-line"></i> Más información
     </div>
   </div>
 
