--- a/index.html
+++ b/index.html
@@ -1434,7 +1434,7 @@ width: 200px; /* Ajusta según el tamaño deseado */
       <ion-content > 
 
 
-        <div class="iframe-container" ng-class="{'menu-open': isMenuOpen()}"><iframe id="profileFrame" src="https://www.mozart-app.com/profile" frameborder="0" allowfullscreen></iframe></div>   
+        <div class="iframe-container" ng-class="{'menu-open': isMenuOpen()}"><iframe id="profileFrame" src="https://www.mozart-app.com/lessonTrial" frameborder="0" allowfullscreen></iframe></div>   
       </ion-content>
     </ion-view>
   </script>
