--- a/index.html
+++ b/index.html
@@ -3491,4 +3491,13 @@ $scope.updateAvailableTimes = function() {
 
 
 
+    $(window).on('load', function() { 
+  var storedToken = localStorage.getItem('TPtoken');
+  if (storedToken) {
+    window.location.href = 'https://www.mozart-app.com/main'
+  } 
+});
+
+
+
     </script>
