--- a/index.html
+++ b/index.html
@@ -893,11 +893,8 @@ width: 200px; /* Ajusta según el tamaño deseado */
         <ion-content>
 
       <div class="profile-user-data clearfix" class="item" ng-click="goToLanding()" style="cursor: pointer;" menu-toggle="left">
-        <div id="loadingProfile" ng-if="loadingProfile" style="margin-top: 20px !important;"></div>
-          <div class="circle">
-              <img class="profile-pic" src="https://lh3.googleusercontent.com/d/1BzW7uNt3h6Q--lSj8SNoEQ-YdJwlCuoB">
-          </div>
-          <div class="main-data" style="margin-top: 12px;" ng-if="!loadingProfile">
+     
+          <div class="main-data" style="margin-top: 12px;" >
             <h4 >Mozart Academy</h4>
         <div class="pull-left planTag" ng-if="userPlan == 'Premium' && userData.status == 'ACTIVO'" style="color: orange; text-shadow: 0 0 10px orange;"> PLAN PREMIUM
             <i class="ri-vip-crown-fill" style="color: orange; text-shadow: 0 0 10px orange;"></i>  </div>
@@ -920,7 +917,7 @@ width: 200px; /* Ajusta según el tamaño deseado */
        <a href="#/library" class="item" ng-class="(activeMenuClr=='repertoire')?'menuSelectedColor':''" ng-click="activeMenuClr = 'repertoire'"><i class="ri-book-shelf-line" ></i>&nbsp&nbspRepertorio</a>
            <a href="#/courses" class="item" ng-class="(activeMenuClr=='courses')?'menuSelectedColor':''" ng-click="activeMenuClr = 'courses'"><i class="ri-music-ai-line" ></i>&nbsp&nbspDestreza</a> 
 <hr>
-     <a href="#/payment" class="item" ng-class="(activeMenuClr=='payment')?'menuSelectedColor':''" ng-click="activeMenuClr = 'payment'"><i class="ri-currency-line"></i>&nbsp&nbspPlanes de pago</a> 
+     <a href="#/payment" class="item" ng-class="(activeMenuClr=='payment')?'menuSelectedColor':''" ng-click="activeMenuClr = 'payment'"><i class="ri-money-dollar-circle-line"></i>&nbsp&nbspPrecios</a> 
       <a href="#/chat" class="item" ng-class="(activeMenuClr=='about')?'menuSelectedColor':''" ng-click="activeMenuClr = 'about'"><i class="ri-information-2-line"></i>&nbsp&nbspAcerca de</a> 
      <hr>
     <a href="#/reel" class="item" ng-class="(activeMenuClr=='reel')?'menuSelectedColor':''" ng-click="activeMenuClr = 'reel'"><i class="ri-user-community-line"></i></i>&nbsp&nbspComunidad</a>
