--- a/trial/profileTrial.html
+++ b/trial/profileTrial.html
@@ -1667,7 +1667,7 @@ body::-webkit-scrollbar-thumb {
 <div ng-app="studentsApp" ng-controller="Controller1" >  
     <section class="content">
       <div class="left-content">
-  <div class="iframe-container" ><iframe src="https://www.mozart-app.com/lessonsTrial" frameborder="0"  allowfullscreen></iframe></div>
+  <div class="iframe-container" ><iframe src="https://www.mozart-app.com/trial/lessonsTrial" frameborder="0"  allowfullscreen></iframe></div>
       </div>
 
       <div class="right-content">
