--- a/main.html
+++ b/main.html
@@ -3279,11 +3279,11 @@ $(window).on('load', function() {
       $('.mainSection').fadeIn('slow')  
     } else {
       localStorage.removeItem('TPtoken');
-     window.location.href = 'https://www.mozart-app.com/';
+     window.location.href = 'https://www.mozart-app.com/login';
     }
   })
   } else {
-    window.location.href = 'https://www.mozart-app.com/';
+    window.location.href = 'https://www.mozart-app.com/login';
   }
 });
 
