--- a/lessons.html
+++ b/lessons.html
@@ -3862,18 +3862,18 @@ app.factory('SharedState', function($http, $q) {
                 ]
               },
               {
-                title: 'Pieza: Minuet, Leopold Mozart',
+                title: 'Pieza: Aria in F',
                 icon: 'audio_file',
                 activity:[{
                   icon: 'piano',
                   type: 'Ejemplo',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/OLtap24RWpg'
+                  url: 'https://www.youtube.com/embed/NIYHDXfB9UQ'
                   },{
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d/1wEngXDEnzxCH-nUdvqpyP9TJl2LT7Z0X/preview'
+                  url: 'https://drive.google.com/file/d/1WhaTn70R8qil68wjWdMAmLfa6Ij77dzC/preview'
                   }
                 ]
               }
