--- a/main.html
+++ b/main.html
@@ -2811,27 +2811,27 @@ width: 200px; /* Ajusta según el tamaño deseado */
     </div>
     <a ui-sref="menu.lessons" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Classroom
     </a>
     <a ui-sref="menu.workspace" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Workspace
     </a>
     <a ui-sref="menu.library" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Reader
     </a>
     <a ui-sref="menu.finder" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Player
     </a>
     <a ui-sref="menu.reel" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Mozart Now
     </a>
 </div>
@@ -3226,27 +3226,27 @@ width: 200px; /* Ajusta según el tamaño deseado */
     </div>
     <a ui-sref="menu.lessons" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Classroom
     </a>
     <a ui-sref="menu.workspace" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Workspace
     </a>
     <a ui-sref="menu.library" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Reader
     </a>
     <a ui-sref="menu.finder" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Player
     </a>
     <a ui-sref="menu.reel" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Mozart Now
     </a>
 </div>
@@ -3527,27 +3527,27 @@ width: 200px; /* Ajusta según el tamaño deseado */
     </div>
     <a ui-sref="menu.lessons" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Classroom
     </a>
     <a ui-sref="menu.workspace" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Workspace
     </a>
     <a ui-sref="menu.library" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Reader
     </a>
     <a ui-sref="menu.finder" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Player
     </a>
     <a ui-sref="menu.reel" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Mozart Now
     </a>
 </div>
@@ -3866,27 +3866,27 @@ width: 200px; /* Ajusta según el tamaño deseado */
     </div>
     <a ui-sref="menu.lessons" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Classroom
     </a>
     <a ui-sref="menu.workspace" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Workspace
     </a>
     <a ui-sref="menu.library" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Reader
     </a>
     <a ui-sref="menu.finder" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Player
     </a>
     <a ui-sref="menu.reel" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Mozart Now
     </a>
 </div>
@@ -4164,27 +4164,27 @@ width: 200px; /* Ajusta según el tamaño deseado */
     </div>
     <a ui-sref="menu.lessons" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Classroom
     </a>
     <a ui-sref="menu.workspace" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Workspace
     </a>
     <a ui-sref="menu.library" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Reader
     </a>
     <a ui-sref="menu.finder" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Player
     </a>
     <a ui-sref="menu.reel" 
        ui-sref-active="menuSelectedColor" 
-       class="button button-clear">
+       class="button button-clear" style="font-weight: 400">
         Mozart Now
     </a>
 </div>
